# stochastic-journey-strategies

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.sh  go.mod  link.sh  run-docker.sh  start.sh
benches/: basic.rs  bench_main.rs  simulation.rs
benches/config/: config.json
data/: LICENSE.txt  ch_sbb.export.sql  de_db.csv  de_db.export.sql
deployments/: config.json
load/: model.go
model/: model.go
query/: recursive.go
simulation/config/: 24h.json  bw.json  config.json  correct.json  csameat.json  csameat_standard_transfers.json  example.json  full.json  full_short_transfers_fuzzy.json  full_short_transfers_fuzzy_with_distr.json  germany.json  relevant.json  relevant_fuzzy_repeated.json  relevant_short_transfers.json  relevant_short_transfers_fuzzy.json  relevant_short_transfers_fuzzy_repeated.json  relevant_short_transfers_fuzzy_with_distr.json
simulation/samples/: samples.json
src/: connection.rs  distribution.rs  distribution_store.rs  gtfs.rs  lib.rs  main.rs  query.rs  types.rs  walking.rs
src/query/: csa.rs  csameat.rs  mod.rs  recursive.rs  topocsa.rs
src/wire/: mod.rs  serde.rs  wire.rs
tests/: api.rs  csameat.rs  fixtures.rs  gtfs.rs  query.rs
tests/fixtures/: LICENSE  basic.pb  basic_out.pb  de_db.csv
tests/fixtures/gtfs_minimal_swiss/: stop_times.txt
