[package]
name = "stost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1"
by_address = "1"
csv = "1.3.0"
quick-protobuf = "0.8"
rouille = "3.6.2"
indexmap = "2"
motis-nigiri = { path = "motis-nigiri-rust", version = "0.1.0" }


[dev-dependencies]
criterion = { version = "0.5", features = [] }

[[bench]]
name = "basic"
harness = false